2005-10-06  noel  <vnoel@cox.net>

	* logview.c (CreateMainWin): Use the desktop monospace font by
	default.

	* log_repaint.c (logview_draw_log_lines): Prevent cast
	warning. Part of bug #318095. Patch by Stanislav Brabec.
	* about.c: Fix missing include. Part of bug #318095. Patch
	by Stanislav Brabec.

2006-10-04  Rodrigo Moya <rodrigo@novell.com>

	* logrtns.c (file_exist): added missing argument to g_snprintf.

2005-09-26  noel  <vnoel@cox.net>

	* logview.c (FileSelectResponse): Fixed a C99-ism. Patch from Jens
	Granseuer, fixes bug #317208.

2005-09-21  noel  <vnoel@cox.net>

	* logview.c (logview_save_prefs): Fix a crash when switching to
	default font size without any log opened. Fix bug #316829.

2005-09-20  Vincent Noel  <vnoel@cox.net>

	* logview.c: Fix a crash when exiting without any log opened.
	Fix bug #316738. Patch from Luke Macken.

==================== 2.12.0 ====================

2005-08-01  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c (logview_draw_log_lines): Don't crash on amd64
	arch. Patch from Joe Marcus Clarke.

2005-07-19  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Fix the Calendar menu item
	sensitivity.

	* log_repaint.c (logview_draw_log_lines): Fix the display of
	one-line logs.

	* monitor.c (mon_update_display): Escape the log lines before
	adding them to the tree.

2005-06-20  Vincent Noel  <vnoel@cox.net>

	* calendar.c: (init_calendar_data):
	* logview.c:
	* userprefs.c: (prefs_create_defaults): Fix functions return
	values. Patch from Stanislav Brabec (bug #308382). Add a few more
	default logs.

2005-06-16  Vincent Noel  <vnoel@cox.net>

	* calendar.c:
	* desc_db.c:
	* logview.c:
	* userprefs.c: Fix implicit includes.

2005-06-14  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: (ReadNewLines):
	* logview.c: (die):
	* zoom.c: (repaint_zoom): Make sure the correct return value is specified.

2005-06-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: (prefs_create_defaults): Thinko.